Patch mostly by jackburton: The global offset for drawing a BPicture needs to be applied before pushing a drawing state, otherwise it is not preserved throughout playing the picture data. I've added the comment and resetting the drawing origin to the previous value. Fixes ticket #6070, thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36933 a95241bf-73f2-0310-859d-f6bbb57e9c96